Working schedule table with simple front

--- a/MetroInformatorBoard/src/main/webapp/home.xhtml
+++ b/MetroInformatorBoard/src/main/webapp/home.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
 <h:head>
-    <title>Board for RAILWAY EMPIRE</title>
+    <title>MetroInformatorBOARD</title>
     <h:outputStylesheet name="/css/bootstrap.min.css"/>
     <h:outputStylesheet name="/css/style.css"/>
 </h:head>
