Frontend part for second app done

--- a/MetroInformator/src/main/resources/messages/templateForEmailInvalidateMessage.html
+++ b/MetroInformator/src/main/resources/messages/templateForEmailInvalidateMessage.html
@@ -1,6 +1,2 @@
-<h1><span style="color: #ff6600;"><img
-        src="https://s.redditmedia.com/t5_bb0bk/styles/profileIcon_k126mhxlvfv01.jpg?fit=crop&crop=faces%2Centropy&arh=1.0&w=256&h=256&s=8a943138a9798721bf0f927abb051f97"
-        alt="" width="267" height="265"/></span></h1>
-<h1><span style="color: #FF00FF;">OOOOOOOPS....</span></h1>
-<h3>Your ticket was invalidate. But you can still walk on the surface, God save your soul</h3>
-<h3>!</h3>
+<h1><span style="color: #FF00FF;">Hello</span></h1>
+<h3>Your ticket was invalidate. But you can still walk on the surface, God save your soul!</h3>
